--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -1,3 +1,10 @@
 body {
-  background: blue;
+  margin: 0;
+  padding: 0;
+
+  #app {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
 }
