--- a/app/stylesheets/ToDoList.scss
+++ b/app/stylesheets/ToDoList.scss
@@ -1,5 +1,6 @@
 .todo-list {
   min-width: 300px;
+  width: 100%;
   height: 100%;
   overflow-y: scroll;
 
@@ -7,14 +8,36 @@
 
   .todo-list__header {
     position: absolute;
-    width: 100%;
-    height: 50px;
+    left: 0;
+    right: 0;
+    padding: 10px;
+
+    height: 30px;
+    max-height: 30px;
+    overflow: hidden;
 
     text-align: center;
+
+    background: green;
+
+    h3 {
+      position: absolute;
+      display: inline;
+      margin: auto;
+      padding: 0;
+    }
+
+    .todo-list__header__new-item-button {
+      float: right;
+      padding: 5px 10px;
+      background: blue;
+    }
   }
 
   .todo-list__item-container {
+    list-style: none;
     margin-top: 50px;
+    padding: 0;
 
     .todo-list__item-container__item-row {
       position: relative;
